--- a/src/styles.css
+++ b/src/styles.css
@@ -152,11 +152,11 @@ p{
 
 .pic1{
   
-  
+  height: 500px;
   width: 100%;
   
   
-  height: 115%;
+  /* height: 115%; */
   
 }
 /* @media only screen and (max-width: 600px) {
