minor change pic1

--- a/src/styles.css
+++ b/src/styles.css
@@ -77,9 +77,9 @@ p{
   * jumbotron animation
   */
 
-.main {
+.jumbotron {
   
-  height: 500px;
+  height: 550px;
  
    /* background-image: url(./images/Dustin.jpg) ; */
     /* background-size: contain;  */
