--- a/src/styles.css
+++ b/src/styles.css
@@ -396,6 +396,7 @@ button.contact-email-text-btn:hover {
 #nav-main{
   display:flex;
   justify-content:center;
+  width: 100%;
   
 }
 
@@ -403,6 +404,7 @@ button.contact-email-text-btn:hover {
   display:flex;
  margin-right:40px;
   list-style-type: none;
+  width: 100%;
   
   
 }
@@ -437,7 +439,7 @@ button.contact-email-text-btn:hover {
  .group {
    display: flex;
    flex-direction: column;
-
+   margin-left:20px;
    list-style-type: none;
  }
 }
@@ -453,3 +455,14 @@ element.style{
   width:500px;
   height:700px
 } */
+
+.form-text {
+  align-text: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .form-text{
+    text-align: center;
+    margin: auto;
+  }
+}
